minor fix of scrollbar on modals

--- a/mobile-app-front-end/app/src/app/components/historymodal/historymodal.page.scss
+++ b/mobile-app-front-end/app/src/app/components/historymodal/historymodal.page.scss
@@ -35,3 +35,7 @@ ion-card-header h2 {
     font-size: 18px;
     font-weight: bold;
 }
+// hide scrolling 
+ion-card {
+    --overflow: hidden;
+}
