--- a/mobile-app-front-end/app/src/app/components/historytokenmodal/historytokenmodal.page.scss
+++ b/mobile-app-front-end/app/src/app/components/historytokenmodal/historytokenmodal.page.scss
@@ -35,3 +35,6 @@ ion-card-header h2 {
     font-size: 18px;
     font-weight: bold;
 }
+ion-card {
+    --overflow: hidden;
+}
